<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Формула ТХ</string>
    <string name="title_photography">Фотография</string>
    <string name="message_cannot_take_photo">"Не возможно сфотографировать: "</string>
    <string name="intro_text">Правила пользования!\n Пока их нет.</string>
    <string name="string_view">Просмотр</string>
    <string name="string_feed">Лента</string>
    <string name="string_heap">Куча</string>
    <string name="string_tags">Тэги</string>
    <string name="string_profile">Профиль</string>
    <string name="string_stub">Заглушка</string>
    <string name="string_imgwebview">Просмотр</string>
    <string name="string_other_tournaments">Другие турниры</string>
    <string name="string_tournament_about">О турнире</string>
    <string name="string_tournament_gamers">Игроки</string>
    <string name="string_tournament_program">Программа</string>
    <string name="string_tournament_schedule">Расписание</string>
    <string name="string_tournament_grids">Сетки</string>
    <string name="string_tournament_liveScore">Livescore</string>
    <string name="string_tournament_photoGallery">Видео и фото</string>
    <string name="string_tournament_findway">Как добраться</string>
    <string name="string_tournament_news">Новости</string>
    <string name="string_tournament_contacts">Контакты</string>
    <string name="string_today">Главная</string>
    <string name="string_navigation">Навигация</string>
    <string name="string_news">Новости</string>
    <string name="string_gamers">Игроки</string>
    <string name="string_about_company">О компании</string>
    <string name="string_st_petersburg_ladies_trophy">St. Peterburg Ladies Trophy</string>
    <string name="string_st_petersburg_open">St.Peterburg Open</string>
    <string name="string_other_tournament">Другие турниры</string>
    <string name="string_photogallery">Фотогалерея</string>
    <string name="string_social_networks">Социальные сети</string>
    <string name="string_gazprom_export">Газпром экспорт</string>
    <string name="string_radio">Радиоподкасты</string>
    <string name="string_tickets">Билеты</string>
    <string name="string_shop">Магазин</string>
    <string name="string_contacts">Обратная связь</string>
    <string name="string_snap">Формула Snap</string>
    <string name="string_turnir">Турнир</string>
    <string name="st_lady_title">St.PETERBURG LADIES TROPHY</string>
    <string name="st_open_title">St.PETERBURG OPEN</string>
    <string name="string_gallery">Галерея</string>
    <string name="string_about_default">Ошибка?</string>
    <string name="string_instagram">Instagram</string>
    <string name="string_twitter">Twitter</string>
    <string name="weather_not_available">Прогноз погоды не доступен</string>
    <string name="string_navigation_partners">Партнеры</string>
    <string name="string_no_area_found">Площадки не найдены.</string>
    <string name="string_no_installer_map_app">Нет приложения, которое может обработать запрос.</string>
    <string name="string_connection_error">Ошибка при соединение с сервером</string>
    <string name="string_no_webbrowser">Нет приложения которое может открыть ссылку.</string>

    <string name="string_address">Адрес:</string>
    <string name="string_address_content">Санкт-Петербург, Футбольная аллея, дом 8</string>
    <string name="string_phone">Телефон:</string>
    <string name="string_email" translatable="false">e-mail: info@formulatx.com</string>
    <string name="string_you_comment">Ваш отзыв</string>
    <string name="string_what_is_you_name">Как вас зовут?</string>
    <string name="string_what_is_your_email">Введите ваш e-mail</string>
    <string name="string_write_your_comment">Оставьте ваш отзыв</string>
    <string name="string_send_comment">ОСТАВИТЬ ОТЗЫВ</string>
    <string name="string_phone_number" translatable="false">+7 (965) 299–99–82</string>
    <string name="string_alert_loading_error">Ошибка</string>
    <string name="string_add_shortcut">ДОБАВИТЬ В ИЗБРАННОЕ</string>
    <string name="string_map">Карта</string>
    <string name="string_favorits">Избранное</string>
    <string name="string_autobus">Расписание автобусов</string>
    <string name="no_araes">Нет площадок</string>
    <string name="string_no_matches">Нет  матчей</string>
    <string name="string_load_error">Произошла ошибка. Загляните позже.</string>
    <string name="string_rem_shortcut">Удалить из избранного</string>
    <string name="string_city_spb">Санкт-Петербург</string>
    <string name="string_city_msk">Москва</string>
    <string name="string_buy_card">Купить билет</string>
    <string name="string_round">Раунд</string>
    <string name="string_photo">Фото</string>
    <string name="string_video">Видео</string>
    <string name="string_rating">Рейтинг:</string>
</resources>
