<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150sp" android:layout_gravity="center_horizontal" android:paddingLeft="30dp"
            android:paddingRight="30dp">
        <LinearLayout android:id="@+id/nav_today" style="@style/menu_item_row">
            <ImageView xmlns:tools="http://schemas.android.com/tools"
                       android:src="@drawable/menu_today_icon"
                       android:contentDescription="@string/string_today"
                       tools:showIn="@layout/main_tournment_layout" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_today" android:layout_weight="1" style="@style/main_text"
                    android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_about" style="@style/menu_item_row">
            <ImageView xmlns:tools="http://schemas.android.com/tools"
                       android:src="@drawable/menu_aboutcompany_icon"
                       android:contentDescription="@string/string_about_company"
                       tools:showIn="@layout/main_tournment_layout" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_about_company" android:layout_weight="1" style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_mt_news" style="@style/menu_item_row">
            <ImageView xmlns:tools="http://schemas.android.com/tools"
                       android:src="@drawable/menu_news_icon"
                       android:contentDescription="@string/string_news"
                       tools:showIn="@layout/main_tournment_layout" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_news" android:layout_weight="1" style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_StPetersburgLadiesTrophy"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView
                    android:src="@drawable/menu_lady_icon"
                    android:contentDescription="@string/string_st_petersburg_ladies_trophy"
                    style="@style/menu_item_icon_size"/>
            <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_st_petersburg_ladies_trophy" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_StPetersburgOpen"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_men_icon"
                       android:contentDescription="@string/string_st_petersburg_open"
                       style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_st_petersburg_open" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_other_tournaments"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_other_mutch_icon"
                       android:contentDescription="@string/string_other_tournament" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_other_tournament" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_photogallery"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_photo_icon"
                       android:contentDescription="@string/string_photogallery" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_photogallery" android:layout_weight="1" style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_social_networks"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_social_icon"
                       android:contentDescription="@string/string_social_networks" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_social_networks" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_gazprom_export"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_gasprom_icon"
                       android:contentDescription="@string/string_gazprom_export" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_gazprom_export" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_radio"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_podcast_icon"
                       android:contentDescription="@string/string_profile" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_radio" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_tickets"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_tickets_icon"
                       android:contentDescription="@string/string_profile" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_tickets" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_shop"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_shop_icon"
                       android:contentDescription="@string/string_profile" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_shop" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_contacts"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_comments_icon"
                       android:contentDescription="@string/string_profile" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_contacts" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/nav_snap"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" android:gravity="center_vertical"
                      style="@style/menu_item_row">
            <ImageView android:src="@drawable/menu_snap_icon"
                       android:contentDescription="@string/string_profile" style="@style/menu_item_icon_size"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/string_snap" android:layout_weight="1"
                    style="@style/main_text"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
